add logic to have worker split by kind
